fixed spacing bug with dropdown menu

--- a/css/index.css
+++ b/css/index.css
@@ -234,6 +234,8 @@ header .nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  right: 90px;
 }
 header .nav a {
   text-decoration: none;
@@ -246,6 +248,7 @@ header .nav .displayA {
   border-top: 1px solid gray;
   padding: 10px;
   width: 100%;
+  background: white;
 }
 header .nav .nav-button {
   width: 90px;
