--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,7 +58,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    position: absolute;
+    right: 90px;
     a {
       text-decoration: none;
       color: gray;
@@ -70,6 +71,7 @@ header {
       border-top: 1px solid gray;
       padding: 10px;
       width: 100%;
+      background: white;
     }
 
     .nav-button {
